2004-01-19  Marco Gerards  <metgerards@student.han.nl>

        * linux/dev/glue/block.c (init_partition): Don't check for BSD
        partitions if the DOS partition is too small.

2004-01-16  Marco Gerards  <metgerards@student.han.nl>

	* linux/dev/glue/block.c (device_get_status): Correctly calculate
	the number of blocks.

2004-01-15  Alfred M. Szmidt  <ams@kemisten.nu>

	* linux/dev/include/asm-i386/string.h (memscan): Don't use
	multi-line string literals for asm().
	* linux/dev/include/asm-i386/segment.h (__generic_memcpy_tofs)
	(__generic_memcpy_fromfs): Likewise.
	* linux/src/include/asm-i386/floppy.h (floppy_hardint): Likewise.
	* i386/i386/proc_reg.h (flush_instr_queue): Likewise.
	* i386/i386/gdt.c (gdt_init): Likewise.

	* linux/src/drivers/scsi/aic7xxx.c: Updated from Linux 2.0.39
	* linux/src/drivers/scsi/aic7xxx.h: Likewise.
	* linux/src/drivers/scsi/aic7xxx_proc.c: Likewise.
	* linux/src/drivers/scsi/scsicam.c: Likewise.
	* linux/src/include/linux/pci.h: Likewise.

	* linux/src/drivers/scsi/53c7,8xx.h (patch_dsa_32): Don't use
	token paste operator (##).

	* Makefile.in (kernel-undef): Match new output format from
	nm (binutils) 2.14.x.

2002-05-27  Roland McGrath  <roland@frob.com>

	* Version 1.3 released.

2002-05-23  Marcus Brinkmann  <marcus@gnu.org>

	* i386/i386at/model_dep.c: Include <kern/cpu_number.h> and
	<kern/assert.h>.
	(machine_idle): New function.
	* bogus/power_save.h (POWER_SAVE): Define to 1.

2002-05-22  Roland McGrath  <roland@frob.com>

	* configure.in (VERSION): New substituted variable: set to 1.3 now.
	(version.c): Add it to AC_OUTPUT.
	* configure: Regenerated.
	* Makefile.in (version): New variable, set from that.
	Remove vpath directive for version.c, not found in build dir.
	(topfiles): version.c -> version.c.in
	* doc/Makefile.in (mach-version): Substituted instead of constant.
	* version.c: File removed, replaced with ...
	* version.c.in: ... this new file.
	(version): Make it const.  Use @VERSION@ for the number.
